finished with part 3

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -1,13 +1,35 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
 <head>
-    <title>HTML5 Drawing</title>
+  <title>HTML5 Drawing</title>
+  <script type="text/javascript" src="includes/modernizr.js"></script>
 </head>
 <body>
-    <div id="container">
-        <h1>HTML5 Canvas Drawing</h1>
-    </div>
+  <div id="container">
+    <h1>HTML5 Canvas Drawing</h1>
+    <canvas id="part1">
+    	<span class="canvas-fallback">Your Browser does not support canvas.</span>
+    </canvas>
+    <canvas id="part2">
+    	<span class="canvas-fallback">Your Browser does not support canvas.</span>
+    </canvas>
+    <canvas id="part3">
+    	<span class="canvas-fallback">Your Browser does not support canvas.</span>
+    </canvas>
+    <canvas id="part4">
+    	<span class="canvas-fallback">Your Browser does not support canvas.</span>
+    </canvas>
+    <canvas id="part5">
+    	<span class="canvas-fallback">Your Browser does not support canvas.</span>
+    </canvas>
+    <canvas id="part6">
+    	<span class="canvas-fallback">Your Browser does not support canvas.</span>
+    </canvas>
+    <canvas id="part7">
+    	<span class="canvas-fallback">Your Browser does not support canvas.</span>
+    </canvas>
+  </div>
 
-
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
