--- a/hw1/index.html
+++ b/hw1/index.html
@@ -29,6 +29,7 @@
     	<span class="canvas-fallback">Your Browser does not support canvas.</span>
     </canvas>
   </div>
+  <img style="display:none;" id="image" src="image/logo.png">
 
   <script type="text/javascript" src="js/main.js"></script>
 </body>
