--- a/hw1/index.html
+++ b/hw1/index.html
@@ -30,6 +30,7 @@
     </canvas>
   </div>
   <img style="display:none;" id="image" src="image/logo.png">
+  <img style="display:none;" id="sunny" src="image/sunny.jpg">
 
   <script type="text/javascript" src="js/main.js"></script>
 </body>
