tumblr requests working

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -17,15 +17,17 @@
 	</header>
 	<section>
 		<div class="container">
-			<div class="row">
-				<div class="col-xs-2">
-					<img class="img-responsive" src="http://placehold.it/800x800">
-				</div>
+			<div id="post-target" class="row">
+				
 			</div>
 		</div>
 	</section>
+	<section id="templates" style="display: none;">
+		<div class="post-template col-xs-4">
+			<img class="img-responsive" src="http://placehold.it/800x800">
+		</div>
+	</section>
 
-	<script type="text/javascript" src="js/thirdparty/oauth-1.0a.js"></script>
 	<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="bower_components/masonry/dist/masonry.pkgd.min.js"></script>
