images loaded + load more functionality

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -20,6 +20,11 @@
 			<div id="post-target" class="row">
 				
 			</div>
+			<div class="row">
+				<div class="col-xs-12">
+					<button id="request-more" class="btn btn-primary btn-block btn-lg">Load More</button>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section id="templates" style="display: none;">
@@ -31,6 +36,7 @@
 	<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="bower_components/masonry/dist/masonry.pkgd.min.js"></script>
+	<script type="text/javascript" src="bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
