--- a/presentation/index.html
+++ b/presentation/index.html
@@ -17,9 +17,7 @@
 	</header>
 	<section>
 		<div class="container">
-			<div id="post-target" class="row">
-				
-			</div>
+			<div id="post-target" class="row"></div>
 			<div class="row">
 				<div class="col-xs-12">
 					<button id="request-more" class="btn btn-primary btn-block btn-lg">Load More</button>
