--- a/presentation/index.html
+++ b/presentation/index.html
@@ -5,12 +5,23 @@
 	<link rel="stylesheet" type="text/css" href="css/master.css">
 </head>
 <body>
-
 	<header>
 		<nav class="navbar navbar-default" role="navigation">
 		  <div class="container">
 		    <div class="navbar-header">
+		    	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
 		      <a class="navbar-brand" href="#">Masonry Demo</a>
+		    </div>
+		    <div class="collapse navbar-collapse" id="main-nav">
+		    	<ul class="nav navbar-nav navbar-right">
+		    		<li><a href="index.html">Demo</a></li>
+		    		<li><a href="presentation.html">Presentation</a></li>
+		    	</ul>
 		    </div>
 		  </div>
 		</nav>
@@ -26,7 +37,7 @@
 		</div>
 	</section>
 	<section id="templates" style="display: none;">
-		<div class="post-template col-xs-4">
+		<div class="post-template col-xs-6 col-md-4">
 			<img class="img-responsive" src="http://placehold.it/800x800">
 		</div>
 	</section>
