--- a/presentation/index.html
+++ b/presentation/index.html
@@ -15,7 +15,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="#">Masonry Demo</a>
+		      <a class="navbar-brand" href="index.html">Masonry Demo</a>
 		    </div>
 		    <div class="collapse navbar-collapse" id="main-nav">
 		    	<ul class="nav navbar-nav navbar-right">
