masonry and lightbox added

--- a/the_project/gallery.html
+++ b/the_project/gallery.html
@@ -40,181 +40,184 @@
 		</nav>
 	</header>
 
-	<section>
+	<section id="gallery">
 		<div class="container">
-			<div class="row">
+			<div id="masonry-target" class="row">
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/AP2resize.jpg">
+						<a href="images/gallery/AP2resize.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/AP2resize.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/AP3resize.jpg">
+						<a href="images/gallery/AP3resize.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/AP3resize.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/APIBR.JPG">
+						<a href="images/gallery/APIBR.JPG" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/APIBR.JPG"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/APIBR1.jpg">
+						<a href="images/gallery/APIBR1.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/APIBR1.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/bathvanity.jpg">
+						<a href="images/gallery/bathvanity.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/bathvanity.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/bed.jpg">
+						<a href="images/gallery/bed.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/bed.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/blanketchestClosed.jpg">
+						<a href="images/gallery/blanketchestClosed.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/blanketchestClosed.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/blanketchestOpen.jpg">
+						<a href="images/gallery/blanketchestOpen.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/blanketchestOpen.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/BunchofKnives_1_1.JPG">
+						<a href="images/gallery/BunchofKnives_1_1.JPG" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/BunchofKnives_1_1.JPG"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/cedarchest.jpg">
+						<a href="images/gallery/cedarchest.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/cedarchest.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/CherryCompDesk.jpg">
+						<a href="images/gallery/CherryCompDesk.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/CherryCompDesk.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/CherryWineRack2.JPG">
+						<a href="images/gallery/CherryWineRack2.JPG" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/CherryWineRack2.JPG"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/coffeetable.jpg">
+						<a href="images/gallery/coffeetable.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/coffeetable.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/ComboRack_1_1_1.JPG">
+						<a href="images/gallery/ComboRack_1_1_1.JPG" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/ComboRack_1_1_1.JPG"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/compdeskDraw.jpg">
+						<a href="images/gallery/compdeskDraw.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/compdeskDraw.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/CurlyMaple.jpg">
+						<a href="images/gallery/CurlyMaple.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/CurlyMaple.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/cuttingboardkife.jpg">
+						<a href="images/gallery/cuttingboardkife.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/cuttingboardkife.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/KCview2resize.jpg">
+						<a href="images/gallery/KCview2resize.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/KCview2resize.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/KCviewresize.jpg">
+						<a href="images/gallery/KCviewresize.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/KCviewresize.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/maple15bottle.JPG">
+						<a href="images/gallery/maple15bottle.JPG" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/maple15bottle.JPG"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/MissionEndTable1.JPG">
+						<a href="images/gallery/MissionEndTable1.JPG" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/MissionEndTable1.JPG"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/OakTwinTip2_1_1.JPG">
+						<a href="images/gallery/OakTwinTip2_1_1.JPG" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/OakTwinTip2_1_1.JPG"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/PizARM4resize.jpg">
+						<a href="images/gallery/PizARM4resize.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/PizARM4resize.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/PizNS2resize.jpg">
+						<a href="images/gallery/PizNS2resize.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/PizNS2resize.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/Seglier4RS.jpg">
+						<a href="images/gallery/Seglier4RS.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/Seglier4RS.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/skirackash.jpg">
+						<a href="images/gallery/skirackash.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/skirackash.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/skirackWO_maple.jpg">
+						<a href="images/gallery/skirackWO_maple.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/skirackWO_maple.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/skirackwski.jpg">
+						<a href="images/gallery/skirackwski.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/skirackwski.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/snowboard_rack0001.jpg">
+						<a href="images/gallery/snowboard_rack0001.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/snowboard_rack0001.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/SnowBoardRackDoubleweb.jpg">
+						<a href="images/gallery/SnowBoardRackDoubleweb.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/SnowBoardRackDoubleweb.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/TwinTipSkiRack1_1_1.JPG">
+						<a href="images/gallery/TwinTipSkiRack1_1_1.JPG" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/TwinTipSkiRack1_1_1.JPG"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/woodframedmirrors.jpg">
+						<a href="images/gallery/woodframedmirrors.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/woodframedmirrors.jpg"></a>
 					</div>
 				</div>
 				<div class="col-xs-4">
 					<div class="image-wrapper">
-						<img class="img-responsive" src="images/gallery/WPWR_MaplewBW3.jpg">
+						<a href="images/gallery/WPWR_MaplewBW3.jpg" data-lightbox="portfolio"><img class="img-responsive" src="images/gallery/WPWR_MaplewBW3.jpg"></a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<script type="text/javascript" src="bower_components/moderinzr/modernizr.js"></script>
+	<script type="text/javascript" src="bower_components/modernizr/modernizr.js"></script>
 	<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script type="text/javascript" src="bower_compoents/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
+	<script type="text/javascript" src="bower_components/masonry/dist/masonry.pkgd.min.js"></script>
+	<script type="text/javascript" src="bower_components/lightbox/js/lightbox.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
