--- a/the_project/contact.html
+++ b/the_project/contact.html
@@ -37,6 +37,16 @@
 			<div class="row">
 				<div class="col-xs-6">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<video controls style="width: 100%;">
+						<source src="video/SkiRackDemo.mp4" type="video/mp4">
+						<source src="video/SkiRackDemo.ogv" type="video/ogg">
+						Video is not Supported
+					</video>
+					<video controls style="width: 100%;">
+						<source src="video/BreadKnifeVideo.mp4" type="video/mp4">
+						<source src="video/BreadKnifeVideo.ogv" type="video/ogg">
+						Video is not Supported
+					</video>
 				</div>
 				<div class="col-xs-6">
 					<div id="map">
