modernizer test for html5 video - had to include custom build to get access to yepnope

--- a/the_project/contact.html
+++ b/the_project/contact.html
@@ -73,7 +73,7 @@
 		</div>
 	</section>
 
-	<script type="text/javascript" src="bower_components/modernizr/modernizr.js"></script>
+	<script type="text/javascript" src="js/modernizr.custom.04005.js"></script>
 	<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
