--- a/the_project/index.html
+++ b/the_project/index.html
@@ -35,9 +35,42 @@
 	<section>
 		<div class="jumbotron">
 			<div class="container">
-				<h1>Hello, world!</h1>
-			  <p>...</p>
-			  <p><a class="btn btn-primary btn-lg" role="button">Learn more</a></p>
+				<div class="inner">
+					<h1>Fine Furniture and Cabinetry</h1>
+				  <p>Famous for our "Ultimate Bread Knife" and free standing wooden ski racks!</p>
+				  <p><a href="contact.html" class="btn btn-primary btn-lg" role="button">Contact us for Purchase!</a></p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="markets">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-6">
+					<div class="market-location">
+						<p>Find us at the Waitsfield Farmer's Market every Saturday!</p>
+					</div>
+				</div>
+				<div class="col-xs-6">
+					<div class="market-location">
+						<p>Occasionally at Stowe Farmer's Market on Sundays!</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="about">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-5">
+					<img class="img-responsive" src="images/combined.png">
+				</div>
+				<div class="col-xs-6 col-xs-push-1">
+					Camels Hump Woodworking is a small woodworking shop located in Central Vermont in the shadow of Camels Hump. Our specialty items are the "Ultimate Bread Knife" and Free standing Wooden Ski Racks.
+
+					We also offer unique wood framed mirrors, fine furniture and cabinetry.
+				</div>
 			</div>
 		</div>
 	</section>
