layout of home and contact pages

--- a/the_project/contact.html
+++ b/the_project/contact.html
@@ -35,20 +35,13 @@
 	<section>
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-6">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<video controls style="width: 100%;">
-						<source src="video/SkiRackDemo.mp4" type="video/mp4">
-						<source src="video/SkiRackDemo.ogv" type="video/ogg">
-						Video is not Supported
-					</video>
-					<video controls style="width: 100%;">
-						<source src="video/BreadKnifeVideo.mp4" type="video/mp4">
-						<source src="video/BreadKnifeVideo.ogv" type="video/ogg">
-						Video is not Supported
-					</video>
+				<div class="col-xs-12">
+					<h2>Give us a shout, and we'll make your handcrafted dreams come true!</h2>
 				</div>
 				<div class="col-xs-6">
+					<p>Camels Hump Woodworking is a small woodworking shop located in Central Vermont in the shadow of Camels Hump. Our specialty items are the "Ultimate Bread Knife" and Free standing Wooden Ski Racks. We also offer unique wood framed mirrors, fine furniture and cabinetry.</p>
+					<p>Our shop is located in a modern post and beam building at my residence. Each item we craft, reguardless of the size is hand finished with attention paid to every detail. The fine furniture is built in hopes that each piece will become a heirloom.</p>
+					<h4>Click the stars to learn more!</h4>
 					<div id="map">
 						<img class="img-responsive" src="images/map.png" alt="Map of Huntington, VT">
 						<div class="map-node huntington">
@@ -56,17 +49,40 @@
 								<i class="glyphicon glyphicon-star"></i>
 							</a>
 							<div class="info-box">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>	
+								<p>Beautiful Huntington Vermont!  Take Bolton exit of I-89.</p>	
 							</div>
 						</div>
 						<div class="map-node moony">
 							<a href="javascript:void(0)">
 								<i class="glyphicon glyphicon-star"></i>
 							</a>
-							<div class="info-box">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>	
+							<div class="info-box clearfix">
+								<img class="img-responsive" src="images/home.jpg">
+								<ul class="address">
+									<li>David and Linda Ruscitto</li>
+									<li>649 Moody Road</li>
+									<li>Huntington, VT 05462</li>
+								</ul>
 							</div>
 						</div>
+					</div>
+				</div>
+				<div class="col-xs-6">
+					<div class="well">
+						<form>
+							<div class="form-group">
+								<label>Name</label>
+								<input type="text" class="form-control" placeholder="John Smith">
+							</div>
+							<div class="form-group">
+								<label>Email</label>
+								<input type="email" class="form-control" placeholder="example@example.com">
+							</div>
+							<div class="form-group">
+								<label>Message</label>
+								<textarea class="form-control" rows="5" placeholder="What are you looking for?"></textarea>
+							</div>
+						</form>
 					</div>
 				</div>
 			</div>
