--- a/the_project/index.html
+++ b/the_project/index.html
@@ -63,17 +63,86 @@
 	<section id="about">
 		<div class="container">
 			<div class="row">
+				<div class="col-xs-12">
+					<h3>Our Shop</h3>
+				</div>
 				<div class="col-xs-5">
 					<img class="img-responsive" src="images/combined.png">
 				</div>
-				<div class="col-xs-6 col-xs-push-1">
-					Camels Hump Woodworking is a small woodworking shop located in Central Vermont in the shadow of Camels Hump. Our specialty items are the "Ultimate Bread Knife" and Free standing Wooden Ski Racks.
-
-					We also offer unique wood framed mirrors, fine furniture and cabinetry.
+				<div class="col-xs-7">
+					<p>Camels Hump Woodworking is a small woodworking shop located in Central Vermont in the shadow of Camels Hump. Our specialty items are the "Ultimate Bread Knife" and Free standing Wooden Ski Racks. We also offer unique wood framed mirrors, fine furniture and cabinetry.</p>
+					<p>Our shop is located in a modern post and beam building at my residence. Each item we craft, reguardless of the size is hand finished with attention paid to every detail. The fine furniture is built in hopes that each piece will become a heirloom.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12">
+					<h3>Ski Racks</h3>
+				</div>
+				<div class="col-xs-7">
+					<p>Offered from stock are distinctive wooden ski and snowboard racks that provide an elegant way to store skis or snowboards. These racks make an excellent addition to vacation ski homes.</p>
+					<table>
+						<tr>
+							<td>
+								<img class="img-responsive" src="images/gallery/skirackash.jpg">
+							</td>
+							<td>
+								<ul>
+									<li>Indoor Use
+										<ul>
+											<li>Furniture quality free standing ski racks made from Hard Maple or Stained Ash</li>
+											<li>Finished with durable hard lacquer</li>
+											<li>Each ski rack holds up to 6 pairs of twin tip skis</li>
+										</ul>
+									</li>
+									<li>Outdoor Use
+										<ul>
+											<li>Made from durable White Oak for use outside</li>
+											<li>Supplied with oil finish</li>
+										</ul>
+									</li>
+								</ul>
+							</td>
+						</tr>
+					</table>
+				</div>
+				<div class="col-xs-5">
+					<video controls style="width: 100%;">
+						<source src="video/SkiRackDemo.mp4" type="video/mp4">
+						<source src="video/SkiRackDemo.ogv" type="video/ogg">
+						Video is not Supported
+					</video>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12">
+					<h3>Ultimate Bread Knife</h3>
+				</div>
+				<div class="col-xs-6">
+					<video controls style="width: 100%;">
+						<source src="video/BreadKnifeVideo.mp4" type="video/mp4">
+						<source src="video/BreadKnifeVideo.ogv" type="video/ogg">
+						Video is not Supported
+					</video>
+				</div>
+				<div class="col-xs-6">
+					<p>Made from Native Vermont Hardwoods and beautifully finished - avaliable in Curly Maple, Birds Eye Maple, Tiger Maple, Black Walnut, and Cherry.  The Blade is from commercial bread slicing equipment and will never need sharpening.  A blade cover made from the same wood species as the knife protects the blade when not in use. The guard is held in place by a magnet embedded in the guard.</p>
+					<img class="img-responsive" src="images/woodburn-edited.png">
 				</div>
 			</div>
 		</div>
 	</section>
+
+	<footer>
+		<div class="container">
+			<div class="col-xs-4">
+				<ul class="address">
+					<li>David and Linda Ruscitto</li>
+					<li>649 Moody Road</li>
+					<li>Huntington, VT 05462</li>
+				</ul>
+			</div>
+		</div>
+	</footer>
 
 	<script type="text/javascript" src="js/modernizr.custom.04005.js"></script>
 	<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
