--- a/the_project/gallery.html
+++ b/the_project/gallery.html
@@ -203,6 +203,18 @@
 			</div>
 		</div>
 	</section>
+	
+	<footer>
+		<div class="container">
+			<div class="col-xs-4">
+				<ul class="address">
+					<li>David and Linda Ruscitto</li>
+					<li>649 Moody Road</li>
+					<li>Huntington, VT 05462</li>
+				</ul>
+			</div>
+		</div>
+	</footer>
 
 	<script type="text/javascript" src="js/modernizr.custom.04005.js"></script>
 	<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
